--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,13 @@
+/* MAIN */
 
-/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
+.container{
+  margin-top: 150px;
+  margin-bottom: 150px;
+  text-align: center;
+}
+
+/* BOTTONS */
+
+#buttons{
+  margin-bottom: 30px;
+}
