ADD CONST DECLARATIONS AND ANONYMOUS FUNCTIONS TO BUTTONS FUNCTIONS SECTION

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,2 @@
-/* MAIN */
 
-.container{
-  margin-top: 150px;
-  margin-bottom: 150px;
-  text-align: center;
-}
-
-/* BOTTONS */
-
-#buttons{
-  margin-bottom: 30px;
-}
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
