--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,10 @@
+/* MAIN */
+.container{
+  margin-top: 150px;
+  margin-bottom: : 150px;
+}
 
-/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
+/* BUTTONS */
+#buttons{
+  margin-bottom: 30px;
+}
