--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* GLOBAL */
+body{
+  background-color: #e8f1ff;
+}
+
 /* MAIN */
 .container{
   margin-top: 150px;
@@ -6,5 +11,52 @@
 
 /* BUTTONS */
 #buttons{
-  margin-bottom: 30px;
+  margin: 60px 0 60px 0;
+}
+button{
+  background-color: #0e63f4;
+  color: #ffffff;
+  padding: 20px 40px 20px 40px;
+  border: 0px;
+  border-radius: 50px;
+  margin-right: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  box-shadow: rgba(255, 255, 255, 0.5) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+/* CONTENT TEXT */
+.small-title{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: #0e63f4;
+  letter-spacing: 6px;
+}
+
+.big-title{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 66px;
+  font-weight: 700;
+  margin: 15px 0 30px 0;
+  line-height: 66px;
+  letter-spacing: 6px;
+}
+
+.random-text{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #999999;
+  letter-spacing: 3px;
+}
+
+.result-text{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 66px;
+  letter-spacing: 6px;
 }
