--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ button{
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 3px;
-  box-shadow: rgba(255, 255, 255, 0.5) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  box-shadow: rgb(14 99 244) 0px 1px 1px 0px inset, rgb(14 99 244 / 40%) 0px 10px 20px 0px, rgb(14 99 244) 0px 30px 60px -30px;
 }
 
 /* CONTENT TEXT */
